add bg to html element, position fixed blobs

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@
   font-family: 'MonaBold';
   src: url('/fonts/Mona-Sans-BoldWide.woff');
 }
+
+html {
+  background-color: black;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
